# zPhone

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: android.yml
apps/SkippyAR/: project.yml
apps/SkippyAR/SkippyAR/: AppDelegate.swift  Info.plist  SkippyARApp.swift
apps/SkippyAR/SkippyAR.xcodeproj/: project.pbxproj
apps/SkippyChat/: settings.gradle.kts
apps/SkippyChat/app/: build.gradle.kts
apps/SkippyChat/gradle/: libs.versions.toml
apps/SkippyDroid/: .gitignore  .gitlab-ci.yml  settings.gradle.kts
apps/SkippyDroid/app/: build.gradle.kts
apps/SkippyDroid/gradle/: libs.versions.toml
apps/SkippyGallery/: settings.gradle.kts
apps/SkippyGallery/app/: build.gradle.kts
apps/SkippyGallery/gradle/: libs.versions.toml
apps/SkippyGlassesMac/: project.yml
apps/SkippyMusic/: settings.gradle.kts
apps/SkippyVoice/: project.yml
misc/: APP_TIERS.md  NAMING.md  OPERATIC_PLAY_SCENE3_THE_ANDROID_AWAKENS.txt  OPERATIC_PLAY_SCENE4_THE_HIJACK.txt  OPERATIC_PLAY_SCENE5_THE_NAVIGATOR_WAKES.txt  OPERATIC_PLAY_SCENE7B_THE_PIPE_WITHOUT_A_NAME.txt  PASSTHROUGH_PROTOCOL.md  PASSTHROUGH_STANDARD.md  PC_DEV_SETUP.md  SESSION_LOG.md  SKIPPYTEL_BRIEF.md  SKIPPYTEL_DESIGN_NOTES.md
models/: README.md
scripts/: deploy_phone.sh
services/flask-api/: Dockerfile
services/model-servers/: README.md
services/physics-mcp/: pyproject.toml
services/physics-mcp/physics_mcp/: __init__.py  server.py
services/physics-mcp/physics_mcp/tools/: __init__.py  constants.py  kinematics.py
(+216 files in other folders)
